// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Options Reducer should have a default state 1`] = `
Object {
  "emptySpace": true,
  "furnaceVariant": Array [
    "smelting",
  ],
  "outputRecipe": "auto",
  "shape": "shaped",
  "tab": "crafting",
}
`;

exports[`Options Reducer should set empty space 1`] = `
Object {
  "emptySpace": false,
  "furnaceVariant": Array [
    "smelting",
  ],
  "outputRecipe": "auto",
  "shape": "shaped",
  "tab": "crafting",
}
`;

exports[`Options Reducer should set output recipe 1`] = `
Object {
  "emptySpace": true,
  "furnaceVariant": Array [
    "smelting",
  ],
  "outputRecipe": "acacia_boat",
  "shape": "shaped",
  "tab": "crafting",
}
`;

exports[`Options Reducer should set shape 1`] = `
Object {
  "emptySpace": true,
  "furnaceVariant": Array [
    "smelting",
  ],
  "outputRecipe": "auto",
  "shape": "shapeless",
  "tab": "crafting",
}
`;
